# flet-auth-test

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  pyproject.toml
src/: __init__.py  cli.py
src/config/: __init__.py  theme_conf.py
src/shared/: size_aware_control.py
src/views/: __init__.py  login.py  routers.py
src/views/auth/: __init__.py  login.py  register.py
